# gestionnaire

./: CMakeLists.txt  README.md  blackclient.cpp  blackclient.h  client.cpp  client.h  controller.cpp  controller.h  data.cpp  data.h  dbmanager.cpp  dbmanager.h  main.cpp  observable.cpp  observable.h  observer.cpp  observer.h  tableurchenil.cpp  tableurchenil.h  tableurchenil.ui  viewblacklist.cpp  viewblacklist.h  viewclientlist.cpp  viewclientlist.h  viewclientmodify.cpp  viewclientmodify.h  viewdayinformation.cpp  viewdayinformation.h  viewdaypiechart.cpp  viewdaypiechart.h  viewhistogrammechat.cpp  viewhistogrammechat.h  viewhistogrammechien.cpp  viewhistogrammechien.h  viewreservation.cpp  viewreservation.h
